fix css z-index

--- a/scss/globals/_utilities.scss
+++ b/scss/globals/_utilities.scss
@@ -41,5 +41,5 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 %box-shadow-right {
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 4px 0 8px rgba(0, 0, 0, 0.15);
 }
